--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,20 @@
             <h2 id="featuredWork">BLOG</h2>
             <div class="blog">
                 <div class="blog">
+                        <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><img class="blog" src="images/BinaryCode.png"></a>
+                            <div class="blogText">
+                                <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><h3 class="blogText">PROBLEMS BEFORE SOLUTIONS</h3></a>
+                                <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><p class="blogText">What issues can occur when you put Solutions ahead of Problems? Is this inherently a bad thing? At first the answer isn't really obvious at all.</p></a>
+                            </div>
+                </div>
+                <div class="blog">
+                        <a href="BlogPosts/Blog_ChoiceAndDiscipline_03292019.html"><img class="blog" src="images/WeightLifting.png"></a>
+                            <div class="blogText">
+                                <a href="BlogPosts/Blog_ChoiceAndDiscipline_03292019.html"><h3 class="blogText">CHOICE AND DISCIPLINE</h3></a>
+                                <a href="BlogPosts/Blog_ChoiceAndDiscipline_03292019.html"><p class="blogText">Could the ability to choose when to be disciplined allow us as humans to discover new things?</p></a>
+                            </div>
+                </div>
+                <div class="blog">
                         <a href="BlogPosts/Blog_Ideas_03172019.html"><img class="blog" src="images/LightBulb.png"></a>
                             <div class="blogText">
                                 <a href="BlogPosts/Blog_Ideas_03172019.html"><h3 class="blogText">IDEATION</h3></a>
