Website restructure to remove "My Work" page

--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,7 @@
                     <a href="index.html"><h1 id="header"><span style="color:#8EEC30">dan@dev</span>:<span style="color:#5BA4BB">/</span>$</h1></a>
             </div>
             <div id="navBar">
-                <h5 class="navBar"><a href="index.html">MY WORK</a></h5>
-                <h5 class="navBar"><a href="blog.html">BLOG</a></h5>
+                <h5 class="navBar"><a href="index.html">BLOG</a></h5>
                 <h5 class="navBar"><a href="BlogPosts/Blog_MissionStatement_03162019.html">MISSION STATEMENT</a></h5>
                 <h5 class="navBar"><a href="contact.html">CONTACT</a></h5>
             </div>
