--- a/index.html
+++ b/index.html
@@ -13,25 +13,43 @@
                 <a href="index.html"><h1 id="header"><span style="color:#8EEC30">dan@dev</span>:<span style="color:#5BA4BB">/</span>$</h1></a>
             </div>
             <div id="navBar">
-                <h5 class="navBar"><a href="index.html">MY WORK</a></h5>
-                <h5 class="navBar"><a href="blog.html">BLOG</a></h5>
+                <h5 class="navBar"><a href="index.html">BLOG</a></h5>
                 <h5 class="navBar"><a href="BlogPosts/Blog_MissionStatement_03162019.html">MISSION STATEMENT</a></h5>
                 <h5 class="navBar"><a href="contact.html">CONTACT</a></h5>
             </div>
         </header>
         <main>
-            <h2 id="featuredWork">MY WORK</h2>
-            <div class="article-imgs">
-                <a href="https://flic.kr/p/XZFyDm" target="_blank"><img class="article-imgs" src="images/Image1.jpg"></a>
-                <a href="https://flic.kr/p/Y6cxe6" target="_blank"><img class="article-imgs" src="images/Image2.jpg"></a>         
-                <a href="https://flic.kr/p/YZBg5K" target="_blank"><img class="article-imgs" src="images/Image3.jpg"></a>
-                <a href="https://flic.kr/p/YJt1ef" target="_blank"><img class="article-imgs" src="images/Image4.jpg"></a>
-                <a href="https://flic.kr/p/YN1V9g" target="_blank"><img class="article-imgs" src="images/Image5.jpg"></a>
-                <a href="https://flic.kr/p/XsP9AR" target="_blank"><img class="article-imgs" src="images/Image6.jpg"></a>
-                <a href="https://flic.kr/p/Y6CGeh" target="_blank"><img class="article-imgs" src="images/Image7.jpg"></a>
-                <a href="https://flic.kr/p/YN1Xce" target="_blank"><img class="article-imgs" src="images/Image8.jpg"></a>
-                <a href="https://flic.kr/p/Y6CHdS" target="_blank"><img class="article-imgs" src="images/Image9.jpg"></a>                         
-                <a href="https://flic.kr/p/2acKExD" target="_blank"><img class="article-imgs" src="images/image11.jpg"></a>
+            <h2 id="featuredWork">BLOG</h2>
+            <div class="blog">
+                <div class="blog">
+                        <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><img class="blog" src="images/BinaryCode.png"></a>
+                            <div class="blogText">
+                                <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><h3 class="blogText">PROBLEMS BEFORE SOLUTIONS</h3></a>
+                                <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><p class="blogText">What issues can occur when you put Solutions ahead of Problems? Is this inherently a bad thing? At first the answer isn't really obvious at all.</p></a>
+                            </div>
+                </div>
+                <div class="blog">
+                        <a href="BlogPosts/Blog_ChoiceAndDiscipline_03292019.html"><img class="blog" src="images/WeightLifting.png"></a>
+                            <div class="blogText">
+                                <a href="BlogPosts/Blog_ChoiceAndDiscipline_03292019.html"><h3 class="blogText">CHOICE AND DISCIPLINE</h3></a>
+                                <a href="BlogPosts/Blog_ChoiceAndDiscipline_03292019.html"><p class="blogText">Could the ability to choose when to be disciplined allow us as humans to discover new things?</p></a>
+                            </div>
+                </div>
+                <div class="blog">
+                        <a href="BlogPosts/Blog_Ideas_03172019.html"><img class="blog" src="images/LightBulb.png"></a>
+                            <div class="blogText">
+                                <a href="BlogPosts/Blog_Ideas_03172019.html"><h3 class="blogText">IDEATION</h3></a>
+                                <a href="BlogPosts/Blog_Ideas_03172019.html"><p class="blogText">Ideation is one of my favorite things. To both practice and to think about. I hold a few core tenants in regards to thinking of great ideas, check them out here.</p></a>
+                            </div>
+                </div>
+                <div class="blog">
+                    <a href="BlogPosts/Blog_MissionStatement_03162019.html"><img class="blog" src="images/Mission.png"></a>
+                        <div class="blogText">
+                            <a href="BlogPosts/Blog_MissionStatement_03162019.html"><h3 class="blogText">MISSION STATEMENT</h3></a>
+                            <a href="BlogPosts/Blog_MissionStatement_03162019.html"><p class="blogText">This is my personal Mission Statement when it comes to work and life.
+                                                 As humans I believe we have a moral responsiblity to add to this world.</p></a>
+                        </div>
+                </div>
             </div>
         </main>
         <footer class="footer">
