--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,13 @@
             <h2 id="featuredWork">BLOG</h2>
             <div class="blog">
                 <div class="blog">
+                        <a href="BlogPosts/Blog_HowIDispelFear_04102019.html"><img class="blog" src="images/Worried.png"></a>
+                            <div class="blogText">
+                                <a href="BlogPosts/Blog_HowIDispelFear_04102019.html"><h3 class="blogText">HOW I DISPEL FEAR</h3></a>
+                                <a href="BlogPosts/Blog_HowIDispelFear_04102019.html"><p class="blogText">Fear is innate in all of us, we all feel it but we don't all deal with it. Many of us don't even know that we can deal with it.</p></a>
+                            </div>
+                </div>
+                <div class="blog">
                         <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><img class="blog" src="images/BinaryCode.png"></a>
                             <div class="blogText">
                                 <a href="BlogPosts/Blog_ProblemsBeforeSolutions_03292019.html"><h3 class="blogText">PROBLEMS BEFORE SOLUTIONS</h3></a>
